# cookiecutter-fastapi-mongo

./: .gitignore  LICENSE  MIGRATION.md  Makefile  README.md  cookiecutter.json  index.html
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  deploy-pages.yml  lint.yml
docs/: index.html
hooks/: post_gen_project.sh
scripts/: docker-compose-build-restart.sh  start-dev.sh  test.sh
website/: README.md  package.json
website/public/: index.html
{{cookiecutter.project_dir_name}}/: .gitignore  Dockerfile  Makefile  Pipfile  docker-compose.yml  env.sample  pyproject.toml  start.sh
{{cookiecutter.project_dir_name}}/app/: server.py
{{cookiecutter.project_dir_name}}/app/api/: health.py
{{cookiecutter.project_dir_name}}/app/api/v1/: sample_resource.py
{{cookiecutter.project_dir_name}}/app/conf/: config.py  logging.yaml
{{cookiecutter.project_dir_name}}/app/dao/: sample_resource.py
{{cookiecutter.project_dir_name}}/app/db/: db.py
{{cookiecutter.project_dir_name}}/app/models/: create_sample_resource.py  mongo_model.py  sample_resource_common.py
{{cookiecutter.project_dir_name}}/app/routers/v1/: sample_resource.py
{{cookiecutter.project_dir_name}}/scripts/: docker-compose-build-restart.sh  start-dev.sh  test.sh
{{cookiecutter.project_dir_name}}/tests/: conftest.py  mongo_client.py  mongo_util.py  test_create_sample_resource.py  test_get_sample_resource.py  test_update_sample_resource.py
{{cookiecutter.project_dir_name}}/tests/mock_data/: sample_resource.json
