[tool.poetry]
name = "{{cookiecutter.app_name}}"
version = "{{cookiecutter.app_version}}"
description = ""
authors = ["{{cookiecutter.author}}"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.1"
motor = "^2.5.1"
gunicorn = "^20.1.0"
PyYAML = "^6.0"
uvicorn = "^0.17.6"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.18.3"
mypy = "^0.942"
requests = "^2.27.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
