[project]
name = "{{cookiecutter.app_name}}"
version = "{{cookiecutter.app_version}}"
description = ""
authors = [{name = "{{cookiecutter.author}}"}]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "motor>=3.6.0",
    "gunicorn>=23.0.0",
    "PyYAML>=6.0",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest-asyncio>=0.24.0",
    "mypy>=1.13.0",
    "requests>=2.32.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["data", ".git", ".github"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
